--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -3,5 +3,5 @@ body{
 }
 #game{
     margin-top: 15px;
-    background-image: url('../IMG/background.png');   
+    background-image: url('../IMG/Backround_with_light.png');   
 }
