--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -2,8 +2,15 @@ body {
     text-align: center;
 }
 
+#info{
+    width: 50%;
+    height: 50px;
+    border: 1px solid red;
+    display: none;
+}
+
 #game {
-    margin-top: 15px;
+    /*position: fixed;*/
     /*background-image: url('../IMG/Backround_with_light.png'); */
     background-image: url('../IMG/bg.png');
 }
