--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -3,10 +3,10 @@ body {
 }
 
 #info{
-    width: 50%;
-    height: 50px;
+    width: 250px;
+    height: 500px;
     border: 1px solid red;
-    display: none;
+    float: right;
 }
 
 #game {
