pesho on screen

--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -12,5 +12,5 @@ body {
 #game {
     /*position: fixed;*/
     /*background-image: url('../IMG/Backround_with_light.png'); */
-    background-image: url('../IMG/bg.png');
+    background-image: url('../IMG/daisy-background.png');
 }
