--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -9,6 +9,29 @@ body {
     float: right;
 }
 
+/* ----------- MENU ----------- */
+@font-face {
+        font-family: 'Indie Flower';
+        src: url('../font/IndieFlower.ttf');
+    }
+    #menu {
+        text-align: center;
+    }
+
+    button {
+        font-family: 'Indie Flower', 'Comic Sans MS', Arial;
+        display: block;
+        margin-top: 15px;
+        width: 500px;
+        height: 75px;
+        border: 0;
+        background: rgb(35, 68, 101);
+        font-size: 2.2em;
+        color: rgb(255, 156, 0);
+        border-radius: 15px;
+    }
+/* ----------- END MENU ----------- */
+
 #game {
     /*position: fixed;*/
     /*background-image: url('../IMG/Backround_with_light.png'); */
