--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -35,5 +35,5 @@ body {
 #game {
     /*position: fixed;*/
     /*background-image: url('../IMG/Backround_with_light.png'); */
-    background-image: url('../IMG/daisy-background.png');
+    background-image: url('../IMG/background_V1_2.jpg');
 }
