--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -1,5 +1,6 @@
 body {
     text-align: center;
+    background-color: palegoldenrod;
     margin: 0;
     padding: 0;
 }
@@ -13,6 +14,27 @@ body {
     border: 1px solid red;
     float: right;
 }
+/* -------- NAVIGATION -------- */
+#navigation{
+    width: 1000px;
+    height: 50px;
+    margin: 0 auto;
+    background-color: forestgreen;
+}
+#back, #pause, #score, #timer{
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 10px;
+}
+#music{
+    display: inline-block;
+    vertical-align: middle;
+    width: 35px;
+    height: 35px;
+    background: url("../IMG/sound-on.png") no-repeat;
+}
 
 /* ----------- MENU ----------- */
 @font-face {
@@ -25,7 +47,7 @@ body {
         margin: 0px auto;
         padding-top: 50px;
         width: 1000px;
-        height: 550px;
+        height: 600px;
     }
 
     #start, #story, #controls, #about {
