change play image on click

--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -48,6 +48,7 @@ body {
         width: 35px;
         height: 40px;
         background: url("../IMG/sound-on.png") no-repeat;
+        border: none;
     }
     #countdown{
 
