active menu buttons

--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -118,7 +118,7 @@ body {
     font-family: 'Indie Flower', 'Comic Sans MS', Arial;
 }
 /* ----------- MESSAGE ----------- */
-#aboutInfo, #howToPlay, #story{
+#aboutInfo, #howToPlay, #gameStory{
     width: 500px;
     height: 400px;
     margin:  -40% 10%;
