--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -1,8 +1,8 @@
 body {
     text-align: center;
     background-color: palegoldenrod;
-    /* margin: 0; */
-    /* padding: 0; */
+    margin: 0;
+    padding: 0;
 }
 #wrapper{
     margin: 0 auto;
@@ -90,7 +90,7 @@ body {
         background-color: #5CADFF;
         color: black;
         font-size: 30px;
-        -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
+        -webkit-transition: all .3s ease; /* For Safari 3.1 to 6.0 */
         transition: all .3s ease;
     }
     #start:focus, #story:focus, #controls:focus, #about:focus{
@@ -98,8 +98,6 @@ body {
     background-color: #5CADFF;
     color: black;
     font-size: 30px;
-    -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
-    transition: all .3s ease;
 }
     #start{
         margin: 0 auto;
