--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -35,6 +35,7 @@ body {
         color: #5CADFF;
     }
     #back, #pause{
+        text-decoration: none;
         font-family: 'Indie Flower';
         font-weight: bold;
         display: inline-block;
@@ -156,14 +157,24 @@ body {
 #msg{
     width: 400px;
     height: 200px;
-    margin:  5% 27%;
+    margin:  1% 27%;
     position: absolute;
     display: block;
     background-color: #5CADFF;
     border-radius: 10px;
-    opacity: 0.8;
+    opacity: 0.95;
     color: #000000;
     font-family: 'Indie Flower', 'Comic Sans MS', Arial;
+    font-size: 25px;
+}
+#playagain{
+    font-family: 'Indie Flower', 'Comic Sans MS', Arial;
+    height: 45px;
+    border: 0;
+    font-size: 30px;
+    color: black;
+    background: #fff;
+    border-radius: 5px;
 }
 /* ----------- MESSAGE ----------- */
 #aboutInfo, #howToPlay, #gameStory{
