--- a/TeamWorkJavaScript/public_html/CSS/Style.css
+++ b/TeamWorkJavaScript/public_html/CSS/Style.css
@@ -77,7 +77,7 @@ body {
     }
     #menu {
         text-align: center;
-        background: url('../IMG/background_Menu_V3.jpg') no-repeat;
+        background: url('../IMG/background_MenuV1.jpg') no-repeat;
         background-size: cover;
         margin: 0 auto;
         width: 1000px;
